[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ufiles"
version = "0.2.3"
description = "A client for Ufiles."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["ufiles", "usso", "object storage", "upload", "media"]
authors = [
  {name = "Mahdi Kiani", email = "mahdikiany@gmail.com"}
]
maintainers = [
  {name = "Mahdi Kiani", email = "mahdikiany@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "pydantic>=2",
  "requests>=2.26.0",
  "pyjwt[crypto]",
  "usso>=0.27.2",
  # "singleton_package",
  "cachetools",
]

[project.urls]
"Homepage" = "https://github.com/ufilesorg/ufiles-python"
"Bug Reports" = "https://github.com/ufilesorg/ufiles-python/issues"
"Funding" = "https://github.com/ufilesorg/ufiles-python"
"Say Thanks!" = "https://saythanks.io/to/mahdikiani"
"Source" = "https://github.com/ufilesorg/ufiles-python"

[tool.setuptools]
package-data = {"sample" = ["*.dat"]}
